# home-server

./: .gitmodules  README.md
app/: README.md  launch.py
app/app/: core.py  flow.py  logic.py
app/gui/: main.qml  qml.qrc  qml_rc.py
app/gui/boot/: bootpage.qml
app/gui/login/: loginpage.qml
app/gui/menu/: menu_main.qml  search_results.qml
app/gui/res/: res.qrc  res_rc.py
app/gui/style/: qtquickcontrols2.conf  rc_style.py
app/gui/utils/: Tile.qml
app/src/: main.py  rc_style.py
app/src-qml/: main.qml
server/: .gitignore  CMakeLists.txt  README.md  TODO.md  main.py  mainlogic.py  requirements.txt  start.ps1  structures.py  testdb.db
server/cpp/: CMakeLists.txt  module.cpp  sandbox.cpp  setup.py
server/cpp/include/: accountmanager.h  concepts.h  crypto_utils.h  database.h  debug.h  directory.h  entry.h  file.h  file_access.h  filemetadata.h  folder.h  jwtmanager.h  jwttable.h  query.h  queryiterator.h  uploadmanager.h  uploadtable.h  user.h  userstable.h  utils.h
server/cpp/python_module/: authentication.cpp  authentication.h  file_navigation.cpp  file_navigation.h  file_transfer.cpp  file_transfer.h
server/cpp/src/: debug.h  file_access.cpp  file_access.h  module.cpp  utils.cpp
server/cpp/src/auth/: accountmanager.cpp  crypto_utils.cpp  jwtmanager.cpp
server/cpp/src/database/: database.cpp  jwttable.cpp  query.cpp  queryiterator.cpp  uploadtable.cpp  userstable.cpp
server/cpp/src/filesystem_structure/: directory.cpp  entry.cpp  file.cpp  filemetadata.cpp  folder.cpp
server/cpp/src/transfer/: uploadmanager.cpp
server/cpp/tests/: CMakeLists.txt  testsuite1.cpp
